Run make manifest

--- a/config/crd/output/crds.yaml
+++ b/config/crd/output/crds.yaml
@@ -3,7 +3,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     api-approved.kubernetes.io: unapproved, temporarily squatting
-    controller-gen.kubebuilder.io/version: v0.4.0
+    controller-gen.kubebuilder.io/version: v0.9.2
   name: hvpas.autoscaling.k8s.io
 spec:
   group: autoscaling.k8s.io
@@ -208,6 +208,7 @@ spec:
                           "value". The requirements are ANDed.
                         type: object
                     type: object
+                    x-kubernetes-map-type: atomic
                   template:
                     description: Template is the object that describes the HPA that
                       will be created.
@@ -241,6 +242,49 @@ spec:
                                 on a single metric (only `type` and one other matching
                                 field should be set at once).
                               properties:
+                                containerResource:
+                                  description: container resource refers to a resource
+                                    metric (such as those specified in requests and
+                                    limits) known to Kubernetes describing a single
+                                    container in each pod of the current scale target
+                                    (e.g. CPU or memory). Such metrics are built in
+                                    to Kubernetes, and have special scaling options
+                                    on top of those available to normal per-pod metrics
+                                    using the "pods" source. This is an alpha feature
+                                    and can be enabled by the HPAContainerMetrics
+                                    feature flag.
+                                  properties:
+                                    container:
+                                      description: container is the name of the container
+                                        in the pods of the scaling target
+                                      type: string
+                                    name:
+                                      description: name is the name of the resource
+                                        in question.
+                                      type: string
+                                    targetAverageUtilization:
+                                      description: targetAverageUtilization is the
+                                        target value of the average of the resource
+                                        metric across all relevant pods, represented
+                                        as a percentage of the requested value of
+                                        the resource for the pods.
+                                      format: int32
+                                      type: integer
+                                    targetAverageValue:
+                                      anyOf:
+                                      - type: integer
+                                      - type: string
+                                      description: targetAverageValue is the target
+                                        value of the average of the resource metric
+                                        across all relevant pods, as a raw value (instead
+                                        of as a percentage of the request), similar
+                                        to the "pods" metric source type.
+                                      pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                                      x-kubernetes-int-or-string: true
+                                  required:
+                                  - container
+                                  - name
+                                  type: object
                                 external:
                                   description: external refers to a global metric
                                     that is not associated with any Kubernetes object.
@@ -305,6 +349,7 @@ spec:
                                             only "value". The requirements are ANDed.
                                           type: object
                                       type: object
+                                      x-kubernetes-map-type: atomic
                                     targetAverageValue:
                                       anyOf:
                                       - type: integer
@@ -401,6 +446,7 @@ spec:
                                             only "value". The requirements are ANDed.
                                           type: object
                                       type: object
+                                      x-kubernetes-map-type: atomic
                                     target:
                                       description: target is the described Kubernetes
                                         object.
@@ -501,6 +547,7 @@ spec:
                                             only "value". The requirements are ANDed.
                                           type: object
                                       type: object
+                                      x-kubernetes-map-type: atomic
                                     targetAverageValue:
                                       anyOf:
                                       - type: integer
@@ -550,9 +597,12 @@ spec:
                                   - name
                                   type: object
                                 type:
-                                  description: type is the type of metric source.  It
-                                    should be one of "Object", "Pods" or "Resource",
-                                    each mapping to a matching field in the object.
+                                  description: 'type is the type of metric source.  It
+                                    should be one of "ContainerResource", "External",
+                                    "Object", "Pods" or "Resource", each mapping to
+                                    a matching field in the object. Note: "ContainerResource"
+                                    type is available on when the feature-gate HPAContainerMetrics
+                                    is enabled'
                                   type: string
                               required:
                               - type
@@ -821,6 +871,7 @@ spec:
                           "value". The requirements are ANDed.
                         type: object
                     type: object
+                    x-kubernetes-map-type: atomic
                   template:
                     description: Template is the object that describes the VPA that
                       will be created.
@@ -1287,9 +1338,3 @@ spec:
         specReplicasPath: .spec.replicas
         statusReplicasPath: .status.replicas
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
