--- a/config/crd/output/crds.yaml
+++ b/config/crd/output/crds.yaml
@@ -3,9 +3,18 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     api-approved.kubernetes.io: unapproved, temporarily squatting
+    certmanager.k8s.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
     controller-gen.kubebuilder.io/version: v0.9.2
   name: hvpas.autoscaling.k8s.io
 spec:
+  conversion:
+    strategy: Webhook
+    webhookClientConfig:
+      caBundle: Cg==
+      service:
+        name: webhook-service
+        namespace: system
+        path: /convert
   group: autoscaling.k8s.io
   names:
     kind: Hvpa
