--- a/config/crd/output/crds.yaml
+++ b/config/crd/output/crds.yaml
@@ -4,6 +4,7 @@ metadata:
   annotations:
     api-approved.kubernetes.io: unapproved, temporarily squatting
     controller-gen.kubebuilder.io/version: v0.9.2
+  creationTimestamp: null
   name: hvpas.autoscaling.k8s.io
 spec:
   group: autoscaling.k8s.io
